--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/NoActionBar">
-        <activity android:name=".loginactivities.SignupActivity"></activity>
+        <activity android:name=".allbooksextend.AllbooksExtendActivity"
+            android:theme="@style/AppTheme"></activity>
+        <activity android:name=".loginactivities.SignupActivity" />
         <activity android:name=".loginactivities.ResetPasswordActivity" />
         <activity android:name=".loginactivities.LoginActivity">
             <intent-filter>
@@ -22,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.MainActivity" />
+        <activity android:name=".mainactivities.MainActivity" />
     </application>
 
 </manifest>
